# LLMtournament

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENCE.md  README.md  config.yaml  pyproject.toml  tasks.py
.github/workflows/: ci.yml
docs/: architecture.md  class_diagram.md  ranking_and_pipeline.md  why_tournaments.md
scripts/: run_college_essays.py  run_frontier_2026.py  run_frontier_2026_fiction.py  run_rag_simulation.py  run_system_prompt_comparison.py
scripts/college_assets/: aspirations.md  cv.md  interests.md  student_profile.md
scripts/git-hooks/: commit-msg
scripts/rag_sources/economy_2025/: dollar_devaluation_2025.txt  economy_outlook_2025.md  geopolitics_technology_2025.md  investment_strategy_2026.txt  market_performance_2025.md
src/llm_tournament/: __init__.py  cli.py  pipeline.py  prompts.py  prompts.yaml  rag.py
src/llm_tournament/core/: __init__.py  config.py  errors.py  progress.py  slug.py
src/llm_tournament/models/: __init__.py  llm_call.py  match.py  rating.py
src/llm_tournament/prompts/: __init__.py  aggregation.py
src/llm_tournament/ranking/: __init__.py  base.py  elo.py  trueskill.py
src/llm_tournament/services/: __init__.py  aggregation.py  analysis.py  reporting.py  submission.py
src/llm_tournament/services/llm/: __init__.py  client.py  cost_tracker.py  fake_responses.yaml  pricing.py
tests/: test_cache.py  test_config.py  test_elo.py  test_llm_client.py  test_match_engine.py  test_pairing.py  test_pipeline_dryrun.py  test_pricing.py  test_rag.py  test_submission.py  test_trueskill.py
(+15 files in other folders)
